--- a/project.html
+++ b/project.html
@@ -28,8 +28,8 @@
         <h3>SLAM EKF</h3>
       </a>
 
-      <a href="projects/jeu-2048.html" class="project-card">
-        <img src="assets/img/jeu-2048.png" alt="Jeu 2048">
+      <a href="projects/gnss.html" class="project-card">
+        <img src="assets/img/gnss.png" alt="Jeu 2048">
         <h3>Jeu 2048 avec IA</h3>
       </a>
 
