--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
       </a>
 
       <a href="projects/gnss.html" class="project-card">
-        <img src="assets/img/gnss.png" alt="Jeu 2048">
+        <img src="assets/img/gnss.png" alt="Projet GNSS">
         <h3>Jeu 2048 avec IA</h3>
       </a>
 
