--- a/project.html
+++ b/project.html
@@ -30,7 +30,7 @@
 
       <a href="projects/gnss.html" class="project-card">
         <img src="assets/img/gnss.png" alt="Projet GNSS">
-        <h3>Jeu 2048 avec IA</h3>
+        <h3>Projet GNSS</h3>
       </a>
 
       <!-- Ajoute d'autres projets ici -->
