--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <main>
         <section class="hero">
-            <h2>Bienvenue sur mon site perso 👋</h2>
-            <p>Je suis Axel, étudiant en aéro et passionné par la tech, les systèmes embarqués et les projets innovants. Ici, tu trouveras mes projets, mon CV et bien plus.</p>
+            <h2>Bienvenue sur mon site perso !</h2>
+            <p>Je suis Axel, étudiant en aéro et passionné par les systèmes embarqués, l'intelligence artificielle et les projets innovants. Ici, tu trouveras mes projets, académiques et personnels, et à terme bien plus.</p>
         </section>
     </main>
 
