--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
     <main>
         <section>
             <h2>À propos de moi</h2>
-            <p>Je suis étudiant à l’IPSA, passionné par l’aéronautique, les systèmes embarqués, l’IA et l’ingénierie. J’aime apprendre, créer et partager mes projets.</p>
-            <p>Ce site est une vitrine personnelle pour montrer ce que je fais en parallèle de mes études.</p>
+            <p>Je suis étudiant à l’IPSA et en double diplôme à Concordia au Canada, passionné par l’aérospatial, les systèmes embarqués, l’IA et l’ingénierie. J’aime apprendre, créer et partager mes projets.</p>
+            <p>Ce site est une vitrine personnelle pour montrer ce que je fais durant mes études ainsi qu'en parallèle.</p>
         </section>
     </main>
 
