--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,11 @@
         <h3>Projet GNSS</h3>
       </a>
 
+      <a href="projects/Twitch_Moderator.html" class="project-card">
+        <img src="assets/img/t_m.png" alt="Projet GNSS">
+        <h3>Projet GNSS</h3>
+      </a>
+
       <!-- Ajoute d'autres projets ici -->
     </div>
   </main>
