--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,7 @@
       </a>
 
       <a href="projects/Twitch_Moderator.html" class="project-card">
-        <img src="assets/img/t_m.png" alt="Projet GNSS">
-        <h3>Projet GNSS</h3>
+        <h3>Modérateur autonome chat Twitch</h3>
       </a>
 
       <!-- Ajoute d'autres projets ici -->
