--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,9 @@
       </a>
 
       <a href="projects/Twitch_Moderator.html" class="project-card">
+        <img src="assets/img/t_m.png" alt="Modérateur autonome chat Twitch">
         <h3>Modérateur autonome chat Twitch</h3>
+        
       </a>
 
       <!-- Ajoute d'autres projets ici -->
