--- a/projects/Twitch_Moderator.html
+++ b/projects/Twitch_Moderator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GNSS - Axel Fouchard</title>
+  <title>Modérateur Twitch - Axel Fouchard</title>
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
 
   <main>
     <section>
-      <img src="../assets/img/gnss.png" alt="GNSS" style="width:100%; max-width:700px; display:block; margin:auto; border-radius:10px;">
+      <img src="../assets/img/t_m.png" alt="Modérateur Twitch" style="width:100%; max-width:700px; display:block; margin:auto; border-radius:10px;">
       <h2>Résumé</h2>
       <p>Ce projet de Machine Learning a été mené dans le but de concevoir un modérateur automatique capable de détecter le
     <strong>sentiment (positif ou négatif)</strong> des messages dans un chat Twitch, plateforme où le flux rapide et non filtré
