--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,11 @@
       <a href="projects/Twitch_Moderator.html" class="project-card">
         <img src="assets/img/t_m.png" alt="Modérateur autonome chat Twitch">
         <h3>Modérateur autonome chat Twitch</h3>
-        
+      </a>
+
+      <a href="projects/RTES.html" class="project-card">
+        <img src="assets/img/edf.png" alt="EDF-Scheduler">
+        <h3>EDF-Scheduling</h3>
       </a>
 
       <!-- Ajoute d'autres projets ici -->
